--- a/03  - Intégration/SCSS/style.scss
+++ b/03  - Intégration/SCSS/style.scss
@@ -1,2 +1,6 @@
 @import "base/_variable.scss";
 @import "base/_base.scss";
+@import "layout/_navbar.scss";
+@import "layout/_hero.scss";
+@import "modules/_link.scss";
+@import "modules/_button.scss";
