--- a/03  - Intégration/SCSS/main.css
+++ b/03  - Intégration/SCSS/main.css
@@ -9,4 +9,91 @@ body {
   overflow-x: hidden;
 }
 
+nav {
+  display: flex;
+  padding: 0 43px;
+  margin-top: 25px;
+  align-items: center;
+  justify-content: space-between;
+}
+nav .wrapper_logo {
+  width: 200px;
+}
+nav .wrapper_logo a img {
+  width: 100%;
+}
+nav .wrapper_navlink {
+  display: flex;
+  justify-content: center;
+}
+nav .wrapper_navlink a {
+  margin: 0 50px;
+}
+nav .wrapper_navlink button {
+  margin: 0 50px;
+  font-size: 15px;
+}
+
+.container_hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: linear-gradient(to right, rgba(96, 160, 216, 0.65), rgba(178, 210, 52, 0.65)), url("../Assets/luisa-brimble-2RrBE90w0T8-unsplash.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
+}
+.container_hero .wrapper_brand {
+  margin: auto;
+}
+.container_hero .wrapper_brand .brand {
+  display: flex;
+  flex-direction: column;
+}
+.container_hero .wrapper_brand .brand h1 {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 126px;
+  color: #FFFFFF;
+  font-weight: 500;
+}
+.container_hero .wrapper_brand .brand h2 {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 54px;
+  font-style: italic;
+  font-weight: 400;
+  color: #FFFFFF;
+  transform: rotate(-9deg);
+}
+.container_hero .wrapper_social {
+  align-self: flex-end;
+  padding-bottom: 46px;
+  padding-right: 47px;
+}
+.container_hero .wrapper_social i {
+  color: #FFFFFF;
+  margin: 0 20px;
+  cursor: pointer;
+}
+
+.wrapper_navlink a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: 300;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.wrapper_navlink .button_order {
+  padding: 9px 30px;
+  font-size: 15px;
+  color: rgb(178, 210, 52);
+  font-weight: 600;
+  background-color: #FFFFFF;
+  border: none;
+  box-shadow: 0 8px 16px rgba(97, 97, 97, 0.16);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=main.css.map */
