:lipstick: add css for container welcome and button

--- a/03  - Intégration/SCSS/modules/_button.scss
+++ b/03  - Intégration/SCSS/modules/_button.scss
@@ -11,3 +11,14 @@
       cursor: pointer;
     }
     }
+    .about_button {
+        padding: 14px 60px;
+        background: $green;
+        color: #FFFFFF;
+        font-size: 24px;
+        font-weight: 600;
+        border-radius: 8px;
+        box-shadow:  0 8px 16px rgba(97, 97, 97, 0.16);
+        text-decoration: none;
+      }
+ 
