--- a/03  - Intégration/SCSS/main.css
+++ b/03  - Intégration/SCSS/main.css
@@ -76,6 +76,50 @@ nav .wrapper_navlink button {
   cursor: pointer;
 }
 
+.container_welcome {
+  position: relative;
+  background: url("../Assets/61842.jpg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container_welcome .wrapper_welcome {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 150px 0;
+}
+.container_welcome .wrapper_welcome .content_welcome {
+  display: flex;
+  flex-direction: column;
+  width: 627px;
+  gap: 40px;
+  margin-left: 150px;
+}
+.container_welcome .wrapper_welcome .content_welcome h3 {
+  font-size: 52px;
+  font-weight: 600;
+  color: rgb(178, 210, 52);
+}
+.container_welcome .wrapper_welcome .content_welcome .text_welcome {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.container_welcome .wrapper_welcome .content_welcome .text_welcome p {
+  font-size: 18px;
+  color: #606060;
+}
+.container_welcome .wrapper_welcome .img_welcome {
+  width: 883px;
+}
+.container_welcome .wrapper_welcome .img_welcome img {
+  width: 100%;
+}
+
 .wrapper_navlink a {
   text-decoration: none;
   color: #FFFFFF;
@@ -94,6 +138,17 @@ nav .wrapper_navlink button {
   box-shadow: 0 8px 16px rgba(97, 97, 97, 0.16);
   border-radius: 8px;
   cursor: pointer;
+}
+
+.about_button {
+  padding: 14px 60px;
+  background: rgb(178, 210, 52);
+  color: #FFFFFF;
+  font-size: 24px;
+  font-weight: 600;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px rgba(97, 97, 97, 0.16);
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=main.css.map */
