:hammer: add import layout

--- a/03  - Intégration/SCSS/style.scss
+++ b/03  - Intégration/SCSS/style.scss
@@ -2,5 +2,6 @@
 @import "base/_base.scss";
 @import "layout/_navbar.scss";
 @import "layout/_hero.scss";
+@import "layout/_welcome.scss";
 @import "modules/_link.scss";
 @import "modules/_button.scss";
