:hammer: add import layout

--- a/03  - Intégration/SCSS/style.scss
+++ b/03  - Intégration/SCSS/style.scss
@@ -3,5 +3,6 @@
 @import "layout/_navbar.scss";
 @import "layout/_hero.scss";
 @import "layout/_welcome.scss";
+@import "layout/_accroche.scss";
 @import "modules/_link.scss";
 @import "modules/_button.scss";
