:lipstick: add css button and css container_accroche

--- a/03  - Intégration/SCSS/modules/_button.scss
+++ b/03  - Intégration/SCSS/modules/_button.scss
@@ -21,4 +21,14 @@
         box-shadow:  0 8px 16px rgba(97, 97, 97, 0.16);
         text-decoration: none;
       }
+    .accroche_button {
+        padding: 14px 60px;
+        background: #FFFFFF;
+        color: $green;
+        font-size: 24px;
+        font-weight: 600;
+        border-radius: 8px;
+        box-shadow:  0 8px 16px rgba(97, 97, 97, 0.16);
+        text-decoration: none;
+      }
  
