--- a/03  - Intégration/SCSS/main.css
+++ b/03  - Intégration/SCSS/main.css
@@ -120,6 +120,57 @@ nav .wrapper_navlink button {
   width: 100%;
 }
 
+.container_accroche {
+  height: 100vh;
+  background: url("../Assets/ismael-trevino-NDyuR4Huig8-unsplash.jpg") center center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.container_accroche .wrapper_accroche {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 11%;
+  background: rgba(178, 210, 52, 0.85);
+  padding: 48px 68px;
+}
+.container_accroche .wrapper_accroche .card_accroche {
+  height: 557px;
+  width: 496px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+}
+.container_accroche .wrapper_accroche .card_accroche .text_accroche {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.container_accroche .wrapper_accroche .card_accroche h4 {
+  color: #FFFFFF;
+  font-size: 52px;
+  font-weight: 600;
+  text-align: center;
+}
+.container_accroche .wrapper_accroche .card_accroche p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+  text-align: center;
+}
+.container_accroche .wrapper_accroche .card_accroche p .underline {
+  text-decoration: underline;
+  color: #FFFFFF;
+  font-weight: 400;
+}
+.container_accroche .wrapper_accroche .card_accroche p .semibold {
+  font-weight: 600;
+}
+
 .wrapper_navlink a {
   text-decoration: none;
   color: #FFFFFF;
@@ -144,6 +195,17 @@ nav .wrapper_navlink button {
   padding: 14px 60px;
   background: rgb(178, 210, 52);
   color: #FFFFFF;
+  font-size: 24px;
+  font-weight: 600;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px rgba(97, 97, 97, 0.16);
+  text-decoration: none;
+}
+
+.accroche_button {
+  padding: 14px 60px;
+  background: #FFFFFF;
+  color: rgb(178, 210, 52);
   font-size: 24px;
   font-weight: 600;
   border-radius: 8px;
