--- a/03  - Intégration/SCSS/style.scss
+++ b/03  - Intégration/SCSS/style.scss
@@ -4,5 +4,6 @@
 @import "layout/_hero.scss";
 @import "layout/_welcome.scss";
 @import "layout/_accroche.scss";
+@import "layout/_menu.scss";
 @import "modules/_link.scss";
 @import "modules/_button.scss";
